--- a/style.css
+++ b/style.css
@@ -5,11 +5,16 @@
 }
 
 header,
-section h2 {
+section h2,
+section h3,
+form button {
   font-family: "Bungee", sans-serif;
+  font-weight: normal;
 }
 
-body {
+body,
+input,
+textarea {
   font-family: "Roboto", sans-serif;
 }
 
@@ -17,11 +22,6 @@ header {
   padding: 16px 0;
   background-color: #182c61;
   color: #ecf0f1;
-}
-
-header h1,
-secrion h2 {
-  font-weight: normal;
 }
 
 header nav li {
@@ -76,4 +76,68 @@ section p {
 
 .fachada {
   margin-right: 32px;
+}
+
+.social-links img {
+  height: 24px;
+}
+
+.social-links li {
+  display: inline;
+  margin-right: 8px;
+}
+
+.social-links li a {
+  text-decoration: none;
+}
+
+#contato .container {
+  display: block;
+}
+
+.contato-metodos {
+  display: flex;
+  justify-content: space-between;
+}
+
+form input,
+form textarea,
+form button {
+  display: block;
+  width: 320px;
+  margin-bottom: 8px;
+  padding: 8px;
+}
+
+form textarea {
+  resize: none;
+  height: 180px;
+}
+
+section h3 {
+  margin-bottom: 16px;
+}
+
+form button,
+button:visited {
+  background-color: #182c61;
+  color: #ecf0f1;
+  cursor: pointer;
+}
+
+form button:hover {
+  border-width: 3px;
+  background-color: #ecf0f1;
+  color: #182c61;
+}
+
+input:focus,
+textarea:focus {
+  outline-color: #182c61;
+}
+
+footer {
+  background-color: #182c61;
+  color: #ecf0f1;
+  padding: 10px 0;
 }
